welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: 'while' expected but identifier found.
  j=j-1;
  ^Array2:20: error: '(' expected but ';' found.
  j=j-1;
       ^Array2:21: error: illegal start of simple expression
  while (estFaceMur==false);
                           ^